bk_ida/gccida/g0/do_replace
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/do_replace/src/regrename.c:848:24: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
regno = ( unsigned int)( *chain->loc)[1]; 
                       ^~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/do_replace/src/regrename.c:850:23: error: use of undeclared identifier 'machine_mode'
*loc = gen_raw_REG( ( machine_mode)*( ( unsigned __int8 *)*loc + 2), reg); 
                      ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/do_replace/src/obj/regrename.o] Error 1
